<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Court Counter</string>
    <string name="hello_world">Hello world!</string>

    <string name="reset">Reset</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="threePts">+3 Points</string>
    <string name="twoPts">+2 Points</string>
    <string name="freeThrow">Free Throw</string>


</resources>
