<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:background="@drawable/basketball">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<LinearLayout
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:padding="@dimen/padding"
				android:text="@string/teamA"
				android:textSize="@dimen/teamLabelTextSize"
				android:textColor="@color/teamLabelTextColor"
				android:fontFamily="sans-serif-medium"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:paddingBottom="@dimen/paddingBottom"
				android:text="0"
				android:textSize="@dimen/scoreTextSize"
				android:textColor="@color/scoreTextColor"
				android:id="@+id/team_a_score"/>

			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/marginLeft"
				android:layout_marginRight="@dimen/marginRight"
				android:layout_marginBottom="@dimen/marginBottom"
				android:text="@string/threePts"
				android:onClick="addThreeForTeamA"/>

			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/marginLeft"
				android:layout_marginRight="@dimen/marginRight"
				android:layout_marginBottom="@dimen/marginBottom"
				android:text="@string/twoPts"
				android:onClick="addTwoForTeamA"/>

			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/marginLeft"
				android:layout_marginRight="@dimen/marginRight"
				android:layout_marginBottom="@dimen/marginBottom"
				android:text="@string/freeThrow"
				android:onClick="addOneForTeamA"/>

		</LinearLayout>

		<View
			android:layout_width="1dp"
			android:layout_height="wrap_content"
			android:background="@android:color/darker_gray"
			android:layout_marginTop="@dimen/marginTop"/>

		<LinearLayout
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:padding="@dimen/padding"
				android:text="@string/teamB"
				android:textSize="@dimen/teamLabelTextSize"
				android:textColor="@color/teamLabelTextColor"
				android:fontFamily="sans-serif-light"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:paddingBottom="@dimen/paddingBottom"
				android:text="0"
				android:textSize="@dimen/scoreTextSize"
				android:textColor="@color/scoreTextColor"
				android:id="@+id/team_b_score"/>

			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/marginLeft"
				android:layout_marginRight="@dimen/marginRight"
				android:layout_marginBottom="@dimen/marginBottom"
				android:text="@string/threePts"
				android:onClick="addThreeForTeamB"/>

			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/marginLeft"
				android:layout_marginRight="@dimen/marginRight"
				android:layout_marginBottom="@dimen/marginBottom"
				android:text="@string/twoPts"
				android:onClick="addTwoForTeamB"/>

			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/marginLeft"
				android:layout_marginRight="@dimen/marginRight"
				android:layout_marginBottom="@dimen/marginBottom"
				android:text="@string/freeThrow"
				android:onClick="addOneForTeamB"/>

		</LinearLayout>

	</LinearLayout>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/reset"
		android:layout_alignParentBottom="true"
		android:layout_centerInParent="true"
		android:layout_marginBottom="@dimen/btnMarginBottom"
		android:onClick="resetScore"/>

</RelativeLayout>

